objects/OSM_Southern_Plain__mdt.object
<CustomObject>
    <fields>
        <fullName>BC_Code__c</fullName>
        <label>BC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Bill_From_Remit_To__c</fullName>
        <label>CC Bill From/Remit To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Code__c</fullName>
        <label>Distributor Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <label>Division Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Bill_From_Remit_To__c</fullName>
        <label>PO Bill From/Remit To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_Code__c</fullName>
        <label>RC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>OSM Southern Plain</label>
    <pluralLabel>OSM Southern Plains</pluralLabel>
</CustomObject>